Bug 333351 - krunner crashed after entering "skype"
Summary: krunner crashed after entering "skype"
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords: drkonqi
: 333127 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-12 11:09 UTC by Eugene
Modified: 2014-05-08 11:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene 2014-04-12 11:09:53 UTC
Application: krunner (4.11.8)
KDE Platform Version: 4.13.0
Qt Version: 4.8.6
Operating System: Linux 3.14.0-031400-generic x86_64
Distribution: Ubuntu 14.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Just entered a few next symbols in it: "skype" (whithout quotes) and crash happened.

-- Backtrace:
Application: Інтерфейс запуску команд (krunner), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f740775e7c0 (LWP 2584))]

Thread 13 (Thread 0x7f73e7bfc700 (LWP 2591)):
#0  0x00007f7407075fbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f73fc005fe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f73fc00630a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f73edb9ae16 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f73fc02af15 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f73fc4e5182 in start_thread (arg=0x7f73e7bfc700) at pthread_create.c:312
#6  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 12 (Thread 0x7f73e73fb700 (LWP 2593)):
#0  0x00007f74070746bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f73fc046c20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f73fc005b14 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f73fc005f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f73fc0060ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f73fc006129 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f73fc02af15 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73e73fb700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 11 (Thread 0x7f73de958700 (LWP 2601)):
#0  0x00007f74070746bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f73fc046c20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f73fc005b14 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f73fc005f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f73fc0060ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7403e9d7be in QEventDispatcherGlib::processEvents (this=0x7f73d40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:436
#6  0x00007f7403e6f0af in QEventLoop::processEvents (this=this@entry=0x7f73de957de0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f7403e6f3a5 in QEventLoop::exec (this=this@entry=0x7f73de957de0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f7403d6bc5f in QThread::exec (this=this@entry=0x2603fd0) at thread/qthread.cpp:537
#9  0x00007f7403e50823 in QInotifyFileSystemWatcherEngine::run (this=0x2603fd0) at io/qfilesystemwatcher_inotify.cpp:265
#10 0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2603fd0) at thread/qthread_unix.cpp:349
#11 0x00007f73fc4e5182 in start_thread (arg=0x7f73de958700) at pthread_create.c:312
#12 0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 10 (Thread 0x7f73ce701700 (LWP 3838)):
#0  0x00007f73fc047620 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f73fc047989 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f73fc005a6c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f73fc005f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f73fc0060ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7403e9d7be in QEventDispatcherGlib::processEvents (this=0x7f73c00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:436
#6  0x00007f7403e6f0af in QEventLoop::processEvents (this=this@entry=0x7f73ce700de0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f7403e6f3a5 in QEventLoop::exec (this=this@entry=0x7f73ce700de0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f7403d6bc5f in QThread::exec (this=this@entry=0x2719140) at thread/qthread.cpp:537
#9  0x00007f7403e50823 in QInotifyFileSystemWatcherEngine::run (this=0x2719140) at io/qfilesystemwatcher_inotify.cpp:265
#10 0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2719140) at thread/qthread_unix.cpp:349
#11 0x00007f73fc4e5182 in start_thread (arg=0x7f73ce701700) at pthread_create.c:312
#12 0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 9 (Thread 0x7f73cdf00700 (LWP 3839)):
[KCrash Handler]
#10 0x00007f7406fbef79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#11 0x00007f7406fc2388 in __GI_abort () at abort.c:89
#12 0x00007f74037d46b5 in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#13 0x00007f74037d2836 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#14 0x00007f74037d2863 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#15 0x00007f74037d2aa2 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#16 0x00007f73c49e1723 in ChertRecordTable::get_record (this=<optimized out>, did=<optimized out>) at ../backends/chert/chert_record.cc:49
#17 0x00007f73c49d6436 in ChertDocument::do_get_data (this=<optimized out>) at ../backends/chert/chert_document.cc:58
#18 0x00007f73c494c437 in Xapian::Document::Internal::get_data (this=<optimized out>) at ../api/omdocument.cc:290
#19 0x00007f73c494c47c in Xapian::Document::get_data (this=this@entry=0x7f73cdeffa80) at ../api/omdocument.cc:66
#20 0x00007f73ca14848f in Baloo::EmailSearchStore::text (this=<optimized out>, queryId=<optimized out>) at ../../../../../src/pim/search/email/emailsearchstore.cpp:106
#21 0x00007f73dc62ce34 in Baloo::ResultIterator::text (this=this@entry=0x7f73cdeffb70) at ../../../src/core/resultiterator.cpp:86
#22 0x00007f73dc85c742 in SearchRunner::match (this=0x2677d10, context=...) at ../../../src/runner/baloosearchrunner.cpp:77
#23 0x00007f740662b24e in Plasma::AbstractRunner::performMatch (this=0x2677d10, localContext=...) at ../../plasma/abstractrunner.cpp:136
#24 0x00007f73fee03cb2 in ThreadWeaver::JobRunHelper::runTheJob (this=this@entry=0x7f73cdeffde0, th=th@entry=0x2ae0580, job=job@entry=0x2ce95e0) at ../../../threadweaver/Weaver/Job.cpp:106
#25 0x00007f73fee03e6e in ThreadWeaver::Job::execute (this=0x2ce95e0, th=0x2ae0580) at ../../../threadweaver/Weaver/Job.cpp:135
#26 0x00007f73fee036bb in ThreadWeaver::Thread::run (this=0x2ae0580) at ../../../threadweaver/Weaver/Thread.cpp:108
#27 0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2ae0580) at thread/qthread_unix.cpp:349
#28 0x00007f73fc4e5182 in start_thread (arg=0x7f73cdf00700) at pthread_create.c:312
#29 0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 8 (Thread 0x7f73cd6ff700 (LWP 3840)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x2891820) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x2891820, previous=0x2cf76c0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x2891820) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2891820) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73cd6ff700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 7 (Thread 0x7f73ccefe700 (LWP 3841)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x25b7bb0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x25b7bb0, previous=0x2d1f440) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x25b7bb0) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x25b7bb0) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73ccefe700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 6 (Thread 0x7f73cc6fd700 (LWP 3842)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x267fc10) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x267fc10, previous=0x2cf6ca0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x267fc10) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x267fc10) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73cc6fd700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 5 (Thread 0x7f73cbefc700 (LWP 3843)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x2771ad0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x2771ad0, previous=0x2ce9b30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x2771ad0) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2771ad0) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73cbefc700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 4 (Thread 0x7f73cb6fb700 (LWP 3844)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x2734110) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x2734110, previous=0x2d281f0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x2734110) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2734110) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73cb6fb700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7f73caefa700 (LWP 3845)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x27402c0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x27402c0, previous=0x2d26930) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x27402c0) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x27402c0) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73caefa700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7f73c59a9700 (LWP 3846)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7403d6e816 in wait (time=18446744073709551615, this=0x26c0cd0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x2783d68, mutex=0x2744780, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f73fee01e6c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2783d40, th=0x2870140) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f73fee04903 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2609ee0, th=0x2870140, previous=0x2ce9a60) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f73fee0361f in ThreadWeaver::Thread::run (this=0x2870140) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f7403d6e32f in QThreadPrivate::start (arg=0x2870140) at thread/qthread_unix.cpp:349
#7  0x00007f73fc4e5182 in start_thread (arg=0x7f73c59a9700) at pthread_create.c:312
#8  0x00007f740708330d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f740775e7c0 (LWP 2584)):
[KCrash Handler]
#6  0x00007f7406fbef79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007f7406fc2388 in __GI_abort () at abort.c:89
#8  0x00007f7406ffc1d4 in __libc_message (do_abort=do_abort@entry=1, fmt=fmt@entry=0x7f740710aa10 "*** Error in `%s': %s: 0x%s ***\n") at ../sysdeps/posix/libc_fatal.c:175
#9  0x00007f7407006f37 in malloc_printerr (action=<optimized out>, str=0x7f7407106ae6 "corrupted double-linked list", ptr=<optimized out>) at malloc.c:4996
#10 0x00007f7407008672 in _int_free (av=0x7f73b8000020, p=<optimized out>, have_lock=0) at malloc.c:3987
#11 0x00007f7403dacf40 in unlink (n=..., this=0x22a3cc0) at tools/qcache.h:75
#12 trim (m=86, this=0x22a3cc0) at tools/qcache.h:208
#13 QCache<QRegExpEngineKey, QRegExpEngine>::insert (this=0x22a3cc0, akey=..., aobject=aobject@entry=0x2cf2a60, acost=acost@entry=14) at tools/qcache.h:188
#14 0x00007f7403da9baf in derefEngine (key=..., eng=0x2cf2a60) at tools/qregexp.cpp:3687
#15 invalidateEngine (priv=0x281ebe0) at tools/qregexp.cpp:3743
#16 0x00007f7403da9ca1 in QRegExp::~QRegExp (this=0x7fffb62e6060, __in_chrg=<optimized out>) at tools/qregexp.cpp:3837
#17 0x00007f740431e2f3 in KStandardDirs::findAllResources (this=<optimized out>, type=type@entry=0x7f74067c4ebf "config", filter=..., options=..., relList=...) at ../../kdecore/kernel/kstandarddirs.cpp:895
#18 0x00007f740431e582 in KStandardDirs::findAllResources (this=<optimized out>, type=type@entry=0x7f74067c4ebf "config", filter=..., options=...) at ../../kdecore/kernel/kstandarddirs.cpp:913
#19 0x00007f74042729cf in KConfigPrivate::parseConfigFiles (this=0x26f5ba0) at ../../kdecore/config/kconfig.cpp:654
#20 0x00007f7404272e3f in KConfig::reparseConfiguration (this=this@entry=0x2879940) at ../../kdecore/config/kconfig.cpp:602
#21 0x00007f7404272f8c in KConfig::KConfig (this=0x2879940, componentData=..., file=..., mode=..., resourceType=0x7f74067c4ebf "config") at ../../kdecore/config/kconfig.cpp:258
#22 0x00007f740428b7c5 in KSharedConfig::KSharedConfig (this=0x2879940, componentData=..., fileName=..., flags=..., resType=<optimized out>) at ../../kdecore/config/ksharedconfig.cpp:64
#23 0x00007f740428ba22 in KSharedConfig::openConfig (componentData=..., fileName=..., flags=..., resType=resType@entry=0x7f74067c4ebf "config") at ../../kdecore/config/ksharedconfig.cpp:56
#24 0x00007f740428bb5f in KSharedConfig::openConfig (fileName=..., flags=..., resType=resType@entry=0x7f74067c4ebf "config") at ../../kdecore/config/ksharedconfig.cpp:35
#25 0x00007f74066fa6fc in Plasma::ThemePrivate::useCache (this=0x26b94d0) at ../../plasma/theme.cpp:317
#26 0x00007f74066fe096 in Plasma::Theme::findInRectsCache (this=0x27453e0, image=..., element=..., rect=...) at ../../plasma/theme.cpp:1078
#27 0x00007f74066f5e20 in Plasma::SvgPrivate::elementRect (this=0x2cf2f80, elementId=...) at ../../plasma/svg.cpp:488
#28 0x00007f74066f6183 in Plasma::Svg::elementSize (this=<optimized out>, elementId=...) at ../../plasma/svg.cpp:724
#29 0x00007f740668b222 in Plasma::FrameSvgPrivate::updateSizes (this=this@entry=0x269ac00) at ../../plasma/framesvg.cpp:965
#30 0x00007f740668c238 in Plasma::FrameSvgPrivate::frameSize (this=this@entry=0x269ac00, frame=frame@entry=0x2d147b0) at ../../plasma/framesvg.cpp:1038
#31 0x00007f740668c4c8 in Plasma::FrameSvgPrivate::cacheId (this=0x269ac00, frame=frame@entry=0x2d147b0, prefixToSave=...) at ../../plasma/framesvg.cpp:924
#32 0x00007f740668d0b3 in Plasma::FrameSvg::setImagePath (this=0x2cf78c0, path=...) at ../../plasma/framesvg.cpp:75
#33 0x00007f74067315a9 in Plasma::ToolButton::ToolButton (this=0x2cf8940, parent=<optimized out>) at ../../plasma/widgets/toolbutton.cpp:161
#34 0x00007f740737af18 in ResultItem::setMatch (this=this@entry=0x2d276f0, match=...) at ../../krunner/interfaces/default/resultitem.cpp:159
#35 0x00007f740737cf7f in ResultScene::setQueryMatches (this=0x2702830, m=...) at ../../krunner/interfaces/default/resultscene.cpp:192
#36 0x00007f740737d569 in ResultScene::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at ./resultscene.moc:71
#37 0x00007f7403e8487a in QMetaObject::activate (sender=0x25d65e0, m=m@entry=0x7f7406a46460 <Plasma::RunnerManager::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffb62e6ab0) at kernel/qobject.cpp:3539
#38 0x00007f74066e4222 in Plasma::RunnerManager::matchesChanged (this=<optimized out>, _t1=...) at ./runnermanager.moc:137
#39 0x00007f74066e7ef1 in matchesChanged (this=<optimized out>) at ../../plasma/runnermanager.cpp:97
#40 Plasma::RunnerManager::qt_static_metacall (_o=0xa18, _id=2584, _a=0x7fffb62e6af0, _c=<optimized out>) at ./runnermanager.moc:85
#41 0x00007f7403e8487a in QMetaObject::activate (sender=0x2605ba8, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3539
#42 0x00007f7403e88a31 in QObject::event (this=0x2605ba8, e=<optimized out>) at kernel/qobject.cpp:1156
#43 0x00007f7404862e2c in QApplicationPrivate::notify_helper (this=this@entry=0x22aaef0, receiver=receiver@entry=0x2605ba8, e=e@entry=0x7fffb62e6fd0) at kernel/qapplication.cpp:4567
#44 0x00007f74048694a0 in QApplication::notify (this=this@entry=0x2297430, receiver=receiver@entry=0x2605ba8, e=e@entry=0x7fffb62e6fd0) at kernel/qapplication.cpp:4353
#45 0x00007f740613fbaa in KApplication::notify (this=0x2297430, receiver=0x2605ba8, event=0x7fffb62e6fd0) at ../../kdeui/kernel/kapplication.cpp:311
#46 0x00007f7403e704dd in QCoreApplication::notifyInternal (this=0x2297430, receiver=0x2605ba8, event=0x7fffb62e6fd0) at kernel/qcoreapplication.cpp:953
#47 0x00007f7403ea0323 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#48 QTimerInfoList::activateTimers (this=0x22aab40) at kernel/qeventdispatcher_unix.cpp:621
#49 0x00007f7403e9d629 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:193
#50 idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:240
#51 0x00007f73fc005e04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#52 0x00007f73fc006048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#53 0x00007f73fc0060ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#54 0x00007f7403e9d7a1 in QEventDispatcherGlib::processEvents (this=0x2260af0, flags=...) at kernel/qeventdispatcher_glib.cpp:434
#55 0x00007f7404904bb6 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#56 0x00007f7403e6f0af in QEventLoop::processEvents (this=this@entry=0x7fffb62e7240, flags=...) at kernel/qeventloop.cpp:149
#57 0x00007f7403e6f3a5 in QEventLoop::exec (this=this@entry=0x7fffb62e7240, flags=...) at kernel/qeventloop.cpp:204
#58 0x00007f7403e74b79 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1225
#59 0x00007f740486137c in QApplication::exec () at kernel/qapplication.cpp:3828
#60 0x00007f74073755a5 in kdemain (argc=1, argv=0x7fffb62e7498) at ../../krunner/main.cpp:64
#61 0x00007f7406fa9ec5 in __libc_start_main (main=0x4006d0 <main(int, char**)>, argc=1, argv=0x7fffb62e7498, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffb62e7488) at libc-start.c:287
#62 0x00000000004006fe in _start ()

Reported using DrKonqi
Comment 1 Vishesh Handa 2014-04-15 16:57:19 UTC
Git commit 3fbb3df42f619f57d390327cf56da4120d9e4ed2 by Vishesh Handa.
Committed on 12/04/2014 at 17:17.
Pushed by vhanda into branch 'KDE/4.13'.

EmailSearchStore: Catch more exceptions

M  +1    -1    src/pim/search/email/emailsearchstore.cpp

http://commits.kde.org/baloo/3fbb3df42f619f57d390327cf56da4120d9e4ed2
Comment 2 Vishesh Handa 2014-05-08 11:14:23 UTC
*** Bug 333127 has been marked as a duplicate of this bug. ***