EmailSearchStore: Catch more exceptions

BUG: 333351